tests/ui/issues/issue-22638.stderr
error: reached the recursion limit while instantiating `D::matches::<{closure@$DIR/issue-22638.rs:39:23: 39:25}>`
  --> $DIR/issue-22638.rs:39:9
   |
LL |         base.matches(&|| C(base.clone()).matches(f))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `D::matches` defined here
  --> $DIR/issue-22638.rs:48:5
   |
LL |     pub fn matches<F: Fn()>(&self, f: &F) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

